--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>LQS文献搜索</title>
   </head>
+  <style>
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    #root{
+        width:100%;
+        height: 100%;
+        position: absolute;
+    }
+
+</style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
